--- a/.github/workflows/attach-release-artefacts.yml
+++ b/.github/workflows/attach-release-artefacts.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         name: header-only
         path: header-only
+    - name: Create archive
+      run: |
+        env -C header-only/ zip -r header-only.zip .
     - uses: softprops/action-gh-release@v1
       with:
-        files: header-only/*
+        files: header-only/header-only.zip
