fix: URL generation

--- a/.github/workflows/show-rev.yml
+++ b/.github/workflows/show-rev.yml
@@ -26,14 +26,14 @@ jobs:
               pr_branch_name = pull_request['head']['ref']
 
               # If we're a fork, pr_repo_name won't match the source repo
-              return f"https://github.com/{pr_repo_name}/edit/${pr_branch_name}{file_path}"
+              return f"https://github.com/{pr_repo_name}/edit/{pr_branch_name}{file_path}"
             elif "commits" in event:
               ref = event['ref']
 
               if (match := re.match("^refs/heads/(.*)$", ref)): 
                 repo_name = event['repository']['full_name']
                 branch_name = match[1]
-                return f"https://github.com/{repo_name}/edit/${branch_name}{file_path}"
+                return f"https://github.com/{repo_name}/edit/{branch_name}{file_path}"
 
           print(get_edit_url())
 
