--- a/.github/workflows/spin.yml
+++ b/.github/workflows/spin.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
       - name: Hello world action step
         id: hello
         uses: ./.github/actions/clinder
