--- a/.github/actions/clinder/action.yml
+++ b/.github/actions/clinder/action.yml
@@ -20,5 +20,5 @@ outputs:
 
 runs:
   using: node20
-  main: dist/setup/index.js
-  post: dist/post/index.js
+  main: setup.mjs
+  post: teardown.js
